--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -138,6 +138,7 @@ body {
 
 #img-div img {
   object-fit: cover;
+  /* opacity: 0.5; */
   height: 100%;
   width: auto;
   transition: filter 600ms ease-in-out, opacity 1000ms ease-in-out;
@@ -177,16 +178,16 @@ body {
   font-size: calc(0.5em + 0.4vw);
   padding: 2vmin 6vmin 10vmin;
   color: white;
-  transition: transform 600ms ease-in-out;
+  transition: transform 400ms ease-out;
 }
 
 /* .container__img-info span {
   background-color: black;
 } */
 
-.slide-out {
-  transform: translateY(200%);
-  transition: transform 600ms ease-in-out;
+.slide-off {
+  transform: translateY(100%);
+  transition: transform 400ms ease-in;
 }
 
 #tribute-info {
