--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -6,13 +6,8 @@
 
 :root {
   font-size: 16px;
-  /* --body-color: hsl(246, 30%, 25%); */
-  /* --body-color: #371A1E; */
   --body-color: #AAA;
   --container-color: hsl(36, 52%, 90%);
-  /* --hdr-ftr-color: hsl(36, 52%, 78%); */
-  /* --hdr-ftr-color: rgb(120, 65, 65); */
-  /* --hdr-ftr-color: rgb(140, 74, 69); */
   --hdr-ftr-color: rgb(130, 50, 46);
 }
 
@@ -51,7 +46,7 @@ body {
   max-width: 100vmin;
 }
 
-.container__header {
+.header {
   font-family: 'Josefin Sans', sans-serif;
   position: absolute;
   padding: 0 3.2vmin;
@@ -67,7 +62,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 78%, 0 100%);
 }
 
-.container__title {
+.header__title {
   padding-top: 5.7vmin;
   width: 100%;
   max-width: 100vmin;
@@ -75,7 +70,7 @@ body {
   font-weight: bold;
 }
 
-.container__hero {
+.hero {
   position: relative;
   margin-top: 18vmin;
   display: flex;
@@ -98,7 +93,7 @@ body {
   );
 }
 
-#porthole {
+.hero__porthole {
   background-color: green;
   position: absolute;
   top: 0;
@@ -126,7 +121,7 @@ body {
   width: 100%;
 }
 
-#img-div {
+.hero__img-div {
   position: relative;
   width: 100%;
   height: 100%;
@@ -136,9 +131,9 @@ body {
   /* opacity: 0; */
 }
 
-#img-div img {
+.hero__image {
   object-fit: cover;
-  /* opacity: 0.5; */
+  opacity: 0.5;
   height: 100%;
   width: auto;
   transition: filter 600ms ease-in-out, opacity 1000ms ease-in-out;
@@ -152,7 +147,7 @@ body {
 }
 
 
-/* .container__img-info {
+/* .hero__img-info {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -166,12 +161,12 @@ body {
   transition: transform 600ms ease-in-out;
 } */
 
-.container__img-info {
+.hero__img-info {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  /* height: 50%; */
+  height: auto;
   background-color: black;
   opacity: 0.6;
   /* font-size: 3vmin; */
@@ -181,7 +176,7 @@ body {
   transition: transform 400ms ease-out;
 }
 
-/* .container__img-info span {
+/* .hero__img-info span {
   background-color: black;
 } */
 
@@ -190,19 +185,19 @@ body {
   transition: transform 400ms ease-in;
 }
 
-#tribute-info {
+.info {
   padding-top: 2vmin;
   padding-bottom: 31vh;
 }
 
-/* .container__img-info {
+/* .hero__img-info {
   text-align: center;
   font-size: calc(1rem + 0.3vmin);
   padding: 1em;
   color: white;
 } */
 
-.container__quotes {
+.info__quotes {
   width: 100%;
   background-color: white;
   padding: 1em;
@@ -210,7 +205,7 @@ body {
   margin-bottom: 2vmin;
 }
 
-.container__quote {
+.info__quote {
   font-style: italic;
 }
 
@@ -226,8 +221,5 @@ body {
   clip-path: polygon(50% 20%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
-/* get rid of container__bg and make header and footer have clip path. Have them be same size, like 20 vmin for example. Header should be absolute, or hero should be instead.*/
-
-/* If you wish to make an apple pie from scratch, you must first invent the universe. */
 
 /* Use cherry color for links, reference to Carl's sweater: #8c1212; */
