--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -8,7 +8,6 @@
   font-size: 16px;
   --body-color: #AAA;
   --container-color: hsl(36, 52%, 88%);
-  /* --container-color: red; */
   --hdr-ftr-color: rgb(60, 75, 170);
   --main-red: #D00;
 }
@@ -87,7 +86,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* max-width: 90vmin; */
   height: 60vh;
   max-height: 90vw;
   overflow: hidden;
@@ -148,7 +146,6 @@ body {
   background-color: rgb(60, 75, 170);
   opacity: 0.7;
   font-size: calc(0.46em + 0.66vmin);
-  /* padding: 2vmin 6.6vmin 11%; */
   padding: 2vmin 6.6vmin calc(2.6em + 3.8vmin);
   color: white;
   transition: transform 400ms ease-in;
@@ -161,28 +158,18 @@ body {
 }
 
 .info {
-  /* background-color: blue; */
   position: relative;
   width: 100%;
   max-width: 100vmin;
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-between; */
-  /* align-items: space-around; */
   padding: 2vmin 2vmin 31vh;
 }
 
 .info__block {
   margin: 2vmin;
   background-color: white;
-  /* flex: 1 1 44vmin; */
-  /* flex: 1 1 40vh; */
   flex: 1 1 44vh;
-  /* flex: 1 1 auto; */
-  /* width: 44vmin; */
-  /* width: 30vw; */
-  /* max-width: 30vw; */
-  /* max-width: 90vmin; */
   padding: 3vmin;
 }
 
@@ -206,27 +193,36 @@ body {
   max-width: none;
   height: 30vh;
   padding-top: 6vh;
-  /* padding-left: 4vmin; */
-  display: grid;
-  grid-template-columns: 46vmin 46vmin;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
   background: var(--hdr-ftr-color);
   clip-path: polygon(50% 20%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 .footer__content {
-  color: white;
-}
-
-.footer__content--copyright {
-  justify-self: start;
-  list-style: none;
+  flex: 0 1 44vh;
+  margin: 2vmin;
+  text-align: center;
+  color: #d6d6d6;
 }
 
 .footer__content--contact {
-  justify-self: end;
   list-style: none;
+}
+
+.footer__content--contact li {
+  display: inline-block;
+  margin: 0.6em;
+}
+
+.icon {
+  width: 1.6em;
+  height: 1.6em;
+  stroke-width: 0;
+  fill: #d6d6d6;
 }
 
 
