--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -12,8 +12,12 @@
   --main-red: #D00;
 }
 
+/* ::selection {
+  background: #33F;
+} */
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Arimo', sans-serif;
   color: #444;
   width: 100%;
   background: var(--body-color);
@@ -33,10 +37,10 @@ body {
   align-items: center;
   background: var(--container-color);
   clip-path: polygon(
-    calc(50% + 50vmin) 0%,
+    calc(50% + 50vmin) 0,
     100% 100%,
-    0% 100%,
-    calc(50% - 50vmin) 0%
+    0 100%,
+    calc(50% - 50vmin) 0
   );
 }
 
@@ -46,13 +50,13 @@ body {
 }
 
 .header {
-  /* font-family: 'Josefin Sans', sans-serif; */
+  font-family: 'Roboto', sans-serif;
   position: absolute;
   width: 100%;
   margin: 0;
   max-width: none;
   height: 55vh;
-  max-height: 60vw;
+  max-height: 65vw;
   display: flex;
   justify-content: center;
   background: var(--hdr-ftr-color);
@@ -64,7 +68,7 @@ body {
   padding-top: 6vmin;
   width: 92%;
   max-width: 92vmin;
-  font-size: 7.8vmin;
+  font-size: 8vmin;
   font-weight: bold;
 }
 
@@ -72,6 +76,7 @@ body {
   position: absolute;
   margin-top: 8.8vmin;
   background-color: var(--main-red);
+  /* background: linear-gradient(to right, var(--main-red), #d60); */
   clip-path: polygon(101% 104%, 0 50%, 101% -4%);
   height: 4vmin;
   width: 65vmin;
@@ -163,7 +168,10 @@ body {
   max-width: 100vmin;
   display: flex;
   flex-wrap: wrap;
-  padding: 2vmin 2vmin 31vh;
+  /* padding: 2vmin 2vmin 28vh; */
+  padding: 2vmin;
+  margin-bottom: 27vh;
+  /* margin-bottom: calc(60vmin - calc(60vmin - 27vh)); */
 }
 
 .info__block {
@@ -176,7 +184,7 @@ body {
 .info__block--quote {
   flex-basis: 100%;
   font-style: italic;
-  color: #777;
+  color: #6f6f6f;
 }
 
 .info__block--quote > q {
@@ -185,13 +193,23 @@ body {
   border-left: 4px solid var(--main-red);
 }
 
+.info__image {
+  width: 100%;
+}
+
+.info__citation {
+  margin: 1vmin 0;
+  font-size: calc(1rem + 0.2vmin);
+  font-weight: bold;
+}
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   max-width: none;
-  height: 30vh;
+  height: 27vh;
+  max-height: 60vmin;
   padding-top: 6vh;
   display: flex;
   flex-wrap: wrap;
@@ -204,7 +222,7 @@ body {
 
 .footer__content {
   flex: 0 1 44vh;
-  margin: 2vmin;
+  margin: 2.5vmin 2vmin;
   text-align: center;
   color: #d6d6d6;
 }
@@ -215,7 +233,12 @@ body {
 
 .footer__content--contact li {
   display: inline-block;
-  margin: 0.6em;
+  margin: 0 0.6em;
+}
+
+.icon:hover {
+  fill: #fff;
+  transition: fill 200ms ease-in-out;
 }
 
 .icon {
@@ -223,6 +246,7 @@ body {
   height: 1.6em;
   stroke-width: 0;
   fill: #d6d6d6;
+  transition: fill 200ms ease-in-out;
 }
 
 
