--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -32,22 +32,22 @@ body {
   font-size: calc(1rem + 1vmin);
   width: 100%;
   min-width: 312px;
-  max-width: 160vmin;
+  max-width: 200vmin;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: var(--container-color);
   clip-path: polygon(
-    calc(50% + 50vmin) 0,
+    calc(50% + 56vmin) 0,
     100% 100%,
     0 100%,
-    calc(50% - 50vmin) 0
+    calc(50% - 56vmin) 0
   );
 }
 
 .container > * {
-  width: 92%;
-  max-width: 92vmin;
+  width: 104vmin;
+  max-width: 92vw;
 }
 
 .header {
@@ -67,8 +67,8 @@ body {
 
 .header__title {
   padding-top: 6vmin;
-  width: 92%;
-  max-width: 92vmin;
+  width: 104vmin;
+  max-width: 92vw;
   font-size: 8vmin;
   font-weight: bold;
 }
@@ -124,7 +124,7 @@ body {
   top: 0;
   margin: auto;
   width: 100vmax;
-  max-width: 100vmin;
+  max-width: 104vmin;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -157,7 +157,7 @@ body {
   background-color: rgb(60, 75, 170);
   opacity: 0.7;
   font-size: calc(0.46em + 0.66vmin);
-  padding: 2vmin 12vmin calc(2.6em + 3.8vmin);
+  padding: 2vmin 10vmin calc(2.6em + 3.8vmin);
   color: white;
   transition: transform 400ms ease-in;
 }
@@ -170,18 +170,19 @@ body {
 
 .info {
   position: relative;
-  width: 100%;
-  max-width: 100vmin;
+  width: 110vmin;
+  max-width: 98vw;
   display: flex;
   flex-wrap: wrap;
-  padding: 2vmin;
+  padding: 1.5vmin;
   margin-bottom: 27vh;
 }
 
 .info__block {
-  margin: 2vmin;
+  margin: 1.5vmin;
   background-color: white;
-  flex: 1 1 44vh;
+  flex: 1 1 47%;
+  min-width: 18vw;
   padding: 3vmin;
 }
 
@@ -192,7 +193,7 @@ body {
 .info__quote {
   color: var(--quote-color);
   display: block;
-  padding-left: 2vmin;
+  padding-left: 3vmin;
   border-left: 4px solid var(--main-red);
 }
 
